@@ -234,51 +234,6 @@ void fini_bans(void)
 /*************************************************************************/
 
 /**
- * Converts Unreal spamfilter action letters to text
- *
- * @param val Unreal spamfilter action letter
- * @return The action in readable text format
- *
- */
-const char *ban_char_to_action(char *val)
-{
-    SET_SEGV_LOCATION();
-
-    if (val) {
-        switch (*val) {
-        case 'k':
-            return "kline";
-        case 'K':
-            return "kill";
-        case 'S':
-            return "tenpshun";
-        case 's':
-            return "shun";
-        case 'z':
-            return "zline";
-        case 'g':
-            return "gline";
-        case 'Z':
-            return "gzline";
-        case 'b':
-            return "block";
-        case 'd':
-            return "dcc";
-        case 'v':
-            return "virsuchan";
-        case 'w':
-            return "warn";
-        default:
-            return "unknown";
-        }
-    }
-    SET_SEGV_LOCATION();
-    return "unknown";
-}
-
-/*************************************************************************/
-
-/**
  * Parse a P10 ircd gline message into a format that sql_do_server_bans_* can handle
  *
  * @param source Server that sent the GLINE
@@ -870,9 +825,6 @@ void sql_do_server_spam_add(char *target, char *action,
               SpamTable, sqlregex);
 
 #ifdef USE_MYSQL
-    if (strlen(action) == 1) {
-        action = sstrdup(ban_char_to_action(action));
-    }
 
     SET_SEGV_LOCATION();
 
@@ -882,16 +834,14 @@ void sql_do_server_spam_add(char *target, char *action,
             rdb_query
                 (QUERY_LOW,
                  "INSERT INTO %s (target, action, setby, expires, setat, duration, reason, regex) VALUES(\'%s\',\'%s\',\'%s\',%ld, %ld,%ld, \'%s\', \'%s\')",
-                 SpamTable, target, action, setby, strtoul(expires, NULL,
-                                                           10),
+                 SpamTable, target, action, setby, strtoul(expires, NULL, 10),
                  strtoul(setat, NULL, 10), strtoul(duration, NULL, 10),
                  sqlreason, sqlregex);
         } else {
             rdb_query
                 (QUERY_LOW,
                  "UPDATE %s SET target=\'%s\', action=\'%s\', setby=\'%s\', expires=%ld, setat=%ld, duration=%ld, reason=\'%s\' WHERE regex =\'%s\'",
-                 SpamTable, target, action, setby, strtoul(expires, NULL,
-                                                           10),
+                 SpamTable, target, action, setby, strtoul(expires, NULL, 10),
                  strtoul(setat, NULL, 10), strtoul(duration, NULL, 10),
                  sqlreason, sqlregex);
         }
@@ -1004,7 +954,7 @@ void sql_do_server_spam_remove(char *target, char *action, char *regex)
 
     SET_SEGV_LOCATION();
 
-    sqlaction = sstrdup(ban_char_to_action(action));    /* copy result into local variable */
+    sqlaction = sstrdup(action);    /* copy result into local variable */
     sqlregex = rdb_escape(regex);       /* prepare sql escaped string */
     sqltarget = rdb_escape(target);     /* prepare sql escaped string */
 
