@@ -622,8 +622,8 @@ void moduleAddIRCDMsgs(void) {
     /* SPAMFILTER */
     m = createMessage("SF",       denora_event_spamfilter); addCoreMessage(IRCD,m);
     /* STATS REPLY */
+    m = createMessage("213",      denora_event_null); addCoreMessage(IRCD,m);
     m = createMessage("230",      denora_event_null); addCoreMessage(IRCD,m);
-    m = createMessage("238",      denora_event_null); addCoreMessage(IRCD,m);
     m = createMessage("239",      denora_event_spamburst); addCoreMessage(IRCD,m);
 }
 
@@ -1334,7 +1334,7 @@ int denora_event_spamfilter(char *source, int ac, char **av)
             char *duration, char *reason, char *regex) */
     	ircsnprintf(setby, BUFSIZE, "%s!%s@%s", u->nick, u->username, u->vhost ? u->vhost : u->host);
     	ircsnprintf(setat, 10, "%ld", (long int) time(NULL));
-        sql_do_server_spam_add(av[2], av[3], setby, 0, setat, av[4], av[ac-2], av[ac-1]);
+        sql_do_server_spam_add(av[2], av[3], setby, "0", setat, av[4], av[ac-2], av[ac-1]);
     } else if (!stricmp(av[1], "-")) {
     	/* (char *target, char *action, char *regex) */
         sql_do_server_spam_remove(av[2], av[3], av[ac-1]);
